[tool.poetry]
name = "paseto"
version = "2.0.0"
description = "Platform-Agnostic Security Tokens for Python (PASETO)"
authors = ["Ryan Littlefield <ryan@ryanlittlefield.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rlittlefield/pypaseto"
keywords = ["paseto", "pypaseto", "jwt", "token"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Security :: Cryptography"
]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^3.0.0"
pysodium = "^0.7.17"
pycryptodomex = "^3.20.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
